--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2 style="font-size: 3rem; font-weight: 500;">About <span style="color: #3DCFD3;">Me</span></h2>
-                        <p style="font-size: 1.2rem;">Highly motivated individual with proven Technical and leadership skills, 
-                        Team player with strong oral and written communication skills, an analytical and problem solving aptitude. 
-                        Computer science and Information Technology Student interested in a Artificial Inteligence, Cryptograph, Blockchain, Full stack development
-                        such kind of new Engineering technologies, to utilize good amount of time to work on several projects.
-						Coming with high energy, adaptive learning and innovative mindset. </p>
+                        <p style="font-size: 1.2rem;">Highly motivated individual with proven technical and leadership skills, Team player with strong oral and written communication skills, and analytical and problem-solving aptitude. Computer science and Information Technology geek, who is interested in an Artificial Intelligence, Cryptography, Blockchain, Full-stack development such kind of new Engineering technologies, to utilize a good amount of time I worked on several projects. Coming with high energy, adaptive learning, and innovative mindset.  </p>
 						<div class="social">
 							<a href="#" style="padding-left: 1rem;"><img src="./images/dribbble.png"></a>
 							<a href="https://github.com/Sank-Infinity" style="padding-left: 1rem;"><img src="./images/github.png"></a>
