--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								 <img width="70" height="64"  src="./images/code.png" style="margin-top: -4.1rem;" > 
 						    	</div> 
 								<h2>Coding</h2>
-								<p>I have worked with several programming languages such as c, c++, python, java, etc. Five star coder on Hackerrank in python, java and sql.</p>
+								<p>I have worked with several programming languages such as c, c++, python, java, etc. Five star coder on Hackerrank. </p>
 							</div>
 				
 							</div>
